[package]
name = "phantom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
serde_json = "1.0.72"
lru = "0.7.0"
fuser = "0.9.1"
libc = "0.2.51"
clap = "2.32"
env_logger = "0.8"

