[package]
name = "phantom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
warp = "0.3"
tracing = "0.1.29"
webdav-handler = "0.2.0"
futures = "0.3.18"
bytes = "1.1.0"
http = "0.2.5"
serde = "1.0.130"
serde_json = "1.0.72"
lru = "0.7.0"
clap = "2.32"
env_logger = "0.8"
